--- a/Verizon_Financials_PreProcessing.ipynb
+++ b/Verizon_Financials_PreProcessing.ipynb
@@ -5303,7 +5303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -5331,7 +5331,6 @@
        "      <th>PE Ratio</th>\n",
        "      <th>DebtToEquity</th>\n",
        "      <th>CurrentRatio</th>\n",
-       "      <th>QuickRatio</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -5341,7 +5340,6 @@
        "      <td>PE=Value</td>\n",
        "      <td>DE=Low Risk</td>\n",
        "      <td>CR=Acceptable</td>\n",
-       "      <td>QR=High Risk</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -5349,7 +5347,6 @@
        "      <td>PE=Value</td>\n",
        "      <td>DE=Low Risk</td>\n",
        "      <td>CR=Acceptable</td>\n",
-       "      <td>QR=High Risk</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -5357,7 +5354,6 @@
        "      <td>PE=Balanced</td>\n",
        "      <td>DE=Low Risk</td>\n",
        "      <td>CR=Acceptable</td>\n",
-       "      <td>QR=High Risk</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -5365,7 +5361,6 @@
        "      <td>PE=Balanced</td>\n",
        "      <td>DE=Low Risk</td>\n",
        "      <td>CR=Acceptable</td>\n",
-       "      <td>QR=Moderate Risk</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -5373,29 +5368,21 @@
        "      <td>PE=Value</td>\n",
        "      <td>DE=Moderate Risk</td>\n",
        "      <td>CR=Good</td>\n",
-       "      <td>QR=Moderate Risk</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                PriceChange     PE Ratio      DebtToEquity   CurrentRatio  \\\n",
-       "1            Price=Positive     PE=Value       DE=Low Risk  CR=Acceptable   \n",
-       "2       Price=Very Positive     PE=Value       DE=Low Risk  CR=Acceptable   \n",
-       "3       Price=Very Positive  PE=Balanced       DE=Low Risk  CR=Acceptable   \n",
-       "4            Price=Negative  PE=Balanced       DE=Low Risk  CR=Acceptable   \n",
-       "5  Price=Extremely Negative     PE=Value  DE=Moderate Risk        CR=Good   \n",
-       "\n",
-       "         QuickRatio  \n",
-       "1      QR=High Risk  \n",
-       "2      QR=High Risk  \n",
-       "3      QR=High Risk  \n",
-       "4  QR=Moderate Risk  \n",
-       "5  QR=Moderate Risk  "
+       "                PriceChange     PE Ratio      DebtToEquity   CurrentRatio\n",
+       "1            Price=Positive     PE=Value       DE=Low Risk  CR=Acceptable\n",
+       "2       Price=Very Positive     PE=Value       DE=Low Risk  CR=Acceptable\n",
+       "3       Price=Very Positive  PE=Balanced       DE=Low Risk  CR=Acceptable\n",
+       "4            Price=Negative  PE=Balanced       DE=Low Risk  CR=Acceptable\n",
+       "5  Price=Extremely Negative     PE=Value  DE=Moderate Risk        CR=Good"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5409,20 +5396,20 @@
     "#CatData['EPS'] = data1final['EPS Category']\n",
     "CatData['DebtToEquity'] = data1final['DebtToEquityCategory']\n",
     "CatData['CurrentRatio'] = data1final['Current Ratio Category']\n",
-    "CatData['QuickRatio'] = data1final['QuickRatioCategory']\n",
+    "#CatData['QuickRatio'] = data1final['QuickRatioCategory']\n",
     "CatData.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocessing Completed In: 1641.3718843460083 seconds\n"
+      "Preprocessing Completed In: 3137.257574558258 seconds\n"
      ]
     }
    ],
