Updated for Clustering

--- a/MiningProject_Preprocessing.ipynb
+++ b/MiningProject_Preprocessing.ipynb
@@ -2,234 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>StockPrice</th>\n",
-       "      <th>TTMNetEPS</th>\n",
-       "      <th>TTMSalesperShare</th>\n",
-       "      <th>PricetoSalesRatio</th>\n",
-       "      <th>BookValueperShare</th>\n",
-       "      <th>TTMFCFperShare</th>\n",
-       "      <th>QuarterlyRevenue</th>\n",
-       "      <th>GrossProfit</th>\n",
-       "      <th>OperatingIncome</th>\n",
-       "      <th>...</th>\n",
-       "      <th>CurrentLiabilities</th>\n",
-       "      <th>CurrentAssetsInventory</th>\n",
-       "      <th>QuickRatio</th>\n",
-       "      <th>DebtToEquity Ratio</th>\n",
-       "      <th>TTMNetIncome</th>\n",
-       "      <th>LTInvestmentsDet</th>\n",
-       "      <th>TotalAssets</th>\n",
-       "      <th>CashOnHand</th>\n",
-       "      <th>LongTermDebt</th>\n",
-       "      <th>TotalLiabilities</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>12/31/2006</td>\n",
-       "      <td>19.46</td>\n",
-       "      <td>2.12</td>\n",
-       "      <td>29.96</td>\n",
-       "      <td>0.65</td>\n",
-       "      <td>16.67</td>\n",
-       "      <td>6.23</td>\n",
-       "      <td>22606</td>\n",
-       "      <td>13454</td>\n",
-       "      <td>3444</td>\n",
-       "      <td>...</td>\n",
-       "      <td>32.28</td>\n",
-       "      <td>21.02</td>\n",
-       "      <td>0.65</td>\n",
-       "      <td>0.59</td>\n",
-       "      <td>13.37</td>\n",
-       "      <td>77.18</td>\n",
-       "      <td>188804</td>\n",
-       "      <td>5653</td>\n",
-       "      <td>28646</td>\n",
-       "      <td>140269</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3/31/2007</td>\n",
-       "      <td>20.04</td>\n",
-       "      <td>2.07</td>\n",
-       "      <td>30.56</td>\n",
-       "      <td>0.66</td>\n",
-       "      <td>16.80</td>\n",
-       "      <td>5.66</td>\n",
-       "      <td>22584</td>\n",
-       "      <td>13672</td>\n",
-       "      <td>3796</td>\n",
-       "      <td>...</td>\n",
-       "      <td>27.91</td>\n",
-       "      <td>16.11</td>\n",
-       "      <td>0.58</td>\n",
-       "      <td>0.58</td>\n",
-       "      <td>13.99</td>\n",
-       "      <td>76.86</td>\n",
-       "      <td>184284</td>\n",
-       "      <td>3450</td>\n",
-       "      <td>28073</td>\n",
-       "      <td>135502</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6/30/2007</td>\n",
-       "      <td>21.98</td>\n",
-       "      <td>2.10</td>\n",
-       "      <td>31.14</td>\n",
-       "      <td>0.71</td>\n",
-       "      <td>17.17</td>\n",
-       "      <td>5.41</td>\n",
-       "      <td>23273</td>\n",
-       "      <td>14042</td>\n",
-       "      <td>4149</td>\n",
-       "      <td>...</td>\n",
-       "      <td>24.45</td>\n",
-       "      <td>15.24</td>\n",
-       "      <td>0.62</td>\n",
-       "      <td>0.59</td>\n",
-       "      <td>14.93</td>\n",
-       "      <td>79.21</td>\n",
-       "      <td>184760</td>\n",
-       "      <td>2356</td>\n",
-       "      <td>29374</td>\n",
-       "      <td>134929</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>9/30/2007</td>\n",
-       "      <td>23.88</td>\n",
-       "      <td>1.88</td>\n",
-       "      <td>31.66</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>17.19</td>\n",
-       "      <td>4.96</td>\n",
-       "      <td>23772</td>\n",
-       "      <td>14164</td>\n",
-       "      <td>4210</td>\n",
-       "      <td>...</td>\n",
-       "      <td>24.16</td>\n",
-       "      <td>15.25</td>\n",
-       "      <td>0.63</td>\n",
-       "      <td>0.59</td>\n",
-       "      <td>15.60</td>\n",
-       "      <td>79.07</td>\n",
-       "      <td>185619</td>\n",
-       "      <td>1909</td>\n",
-       "      <td>29383</td>\n",
-       "      <td>135930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12/31/2007</td>\n",
-       "      <td>23.78</td>\n",
-       "      <td>1.90</td>\n",
-       "      <td>32.18</td>\n",
-       "      <td>0.74</td>\n",
-       "      <td>17.58</td>\n",
-       "      <td>5.78</td>\n",
-       "      <td>23840</td>\n",
-       "      <td>14044</td>\n",
-       "      <td>3423</td>\n",
-       "      <td>...</td>\n",
-       "      <td>24.74</td>\n",
-       "      <td>16.97</td>\n",
-       "      <td>0.69</td>\n",
-       "      <td>0.56</td>\n",
-       "      <td>15.58</td>\n",
-       "      <td>78.78</td>\n",
-       "      <td>186959</td>\n",
-       "      <td>3397</td>\n",
-       "      <td>28203</td>\n",
-       "      <td>136378</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Date  StockPrice  TTMNetEPS  TTMSalesperShare  PricetoSalesRatio  \\\n",
-       "0  12/31/2006       19.46       2.12             29.96               0.65   \n",
-       "1   3/31/2007       20.04       2.07             30.56               0.66   \n",
-       "2   6/30/2007       21.98       2.10             31.14               0.71   \n",
-       "3   9/30/2007       23.88       1.88             31.66               0.75   \n",
-       "4  12/31/2007       23.78       1.90             32.18               0.74   \n",
-       "\n",
-       "   BookValueperShare  TTMFCFperShare  QuarterlyRevenue  GrossProfit  \\\n",
-       "0              16.67            6.23             22606        13454   \n",
-       "1              16.80            5.66             22584        13672   \n",
-       "2              17.17            5.41             23273        14042   \n",
-       "3              17.19            4.96             23772        14164   \n",
-       "4              17.58            5.78             23840        14044   \n",
-       "\n",
-       "   OperatingIncome        ...         CurrentLiabilities  \\\n",
-       "0             3444        ...                      32.28   \n",
-       "1             3796        ...                      27.91   \n",
-       "2             4149        ...                      24.45   \n",
-       "3             4210        ...                      24.16   \n",
-       "4             3423        ...                      24.74   \n",
-       "\n",
-       "   CurrentAssetsInventory  QuickRatio  DebtToEquity Ratio  TTMNetIncome  \\\n",
-       "0                   21.02        0.65                0.59         13.37   \n",
-       "1                   16.11        0.58                0.58         13.99   \n",
-       "2                   15.24        0.62                0.59         14.93   \n",
-       "3                   15.25        0.63                0.59         15.60   \n",
-       "4                   16.97        0.69                0.56         15.58   \n",
-       "\n",
-       "   LTInvestmentsDet  TotalAssets  CashOnHand  LongTermDebt  TotalLiabilities  \n",
-       "0             77.18       188804        5653         28646            140269  \n",
-       "1             76.86       184284        3450         28073            135502  \n",
-       "2             79.21       184760        2356         29374            134929  \n",
-       "3             79.07       185619        1909         29383            135930  \n",
-       "4             78.78       186959        3397         28203            136378  \n",
-       "\n",
-       "[5 rows x 24 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Load Pandas libraries with alias 'pd' \n",
-    "import pandas as pd \n",
-    "data1 = pd.read_csv(\"VerizonFinancialsCleaned.csv\")\n",
-    "data2 = pd.read_csv(\"Telcom.csv\") \n",
-    "data1.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -357,47 +130,35 @@
        "4  129.963699  43.533630  21.368469  206.589996  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Load Pandas libraries with alias 'pd' \n",
+    "import pandas as pd \n",
+    "#data1 = pd.read_csv(\"VerizonFinancialsCleaned.csv\")\n",
+    "data2 = pd.read_csv(\"Telcom.csv\") \n",
     "data2.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0         NaN\n",
-       "1    0.000571\n",
-       "2    0.005979\n",
-       "3    0.004531\n",
-       "4   -0.017030\n",
-       "Name: ATT, dtype: float64"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#TEST ONE COLUMN\n",
     "#Create new columns for daily lognormal return\n",
     "import numpy as np\n",
     "# normalize data with natural log of difference between each day\n",
-    "np.log(data2.ATT/data2.ATT.shift(1)).head()"
+    "#np.log(data2.ATT/data2.ATT.shift(1)).head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +178,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +248,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +389,7 @@
        "4 -0.002881 -0.008936 -0.015360 -0.004973  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +479,7 @@
        "0  1/2/2013    NaN NaN   NaN  NaN   NaN  NaN  NaN  NaN  NaN   NaN"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +620,7 @@
        "4  0.002539  0.006024  0.002847 -0.003054  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +635,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>CMCSA</th>\n",
+       "      <th>VZ</th>\n",
+       "      <th>TMUS</th>\n",
+       "      <th>ATT</th>\n",
+       "      <th>QCOM</th>\n",
+       "      <th>QQQ</th>\n",
+       "      <th>SPY</th>\n",
+       "      <th>IXP</th>\n",
+       "      <th>IYZ</th>\n",
+       "      <th>IXTC</th>\n",
+       "      <th>VZ_Perf</th>\n",
+       "      <th>IYZ_Perf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/3/2013</td>\n",
+       "      <td>-0.011226</td>\n",
+       "      <td>-0.004755</td>\n",
+       "      <td>-0.007243</td>\n",
+       "      <td>0.000571</td>\n",
+       "      <td>-0.004644</td>\n",
+       "      <td>-0.005222</td>\n",
+       "      <td>-0.002262</td>\n",
+       "      <td>-0.006367</td>\n",
+       "      <td>-0.002831</td>\n",
+       "      <td>-0.004593</td>\n",
+       "      <td>VZNeutral</td>\n",
+       "      <td>IYZNeutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/4/2013</td>\n",
+       "      <td>-0.000525</td>\n",
+       "      <td>0.005432</td>\n",
+       "      <td>0.010331</td>\n",
+       "      <td>0.005979</td>\n",
+       "      <td>-0.014850</td>\n",
+       "      <td>-0.003297</td>\n",
+       "      <td>0.004382</td>\n",
+       "      <td>0.006881</td>\n",
+       "      <td>0.008871</td>\n",
+       "      <td>0.007387</td>\n",
+       "      <td>VZNeutral</td>\n",
+       "      <td>IYZNeutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/7/2013</td>\n",
+       "      <td>-0.004475</td>\n",
+       "      <td>0.008765</td>\n",
+       "      <td>-0.017626</td>\n",
+       "      <td>0.004531</td>\n",
+       "      <td>0.008000</td>\n",
+       "      <td>0.000301</td>\n",
+       "      <td>-0.002737</td>\n",
+       "      <td>0.002055</td>\n",
+       "      <td>0.000803</td>\n",
+       "      <td>-0.001252</td>\n",
+       "      <td>VZNeutral</td>\n",
+       "      <td>IYZNeutral</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/8/2013</td>\n",
+       "      <td>0.006836</td>\n",
+       "      <td>-0.024636</td>\n",
+       "      <td>-0.024353</td>\n",
+       "      <td>-0.017030</td>\n",
+       "      <td>-0.001564</td>\n",
+       "      <td>-0.001952</td>\n",
+       "      <td>-0.002881</td>\n",
+       "      <td>-0.008936</td>\n",
+       "      <td>-0.015360</td>\n",
+       "      <td>-0.004973</td>\n",
+       "      <td>VZNeg</td>\n",
+       "      <td>IYZNeg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/9/2013</td>\n",
+       "      <td>0.006791</td>\n",
+       "      <td>-0.002323</td>\n",
+       "      <td>0.006410</td>\n",
+       "      <td>-0.003207</td>\n",
+       "      <td>0.015063</td>\n",
+       "      <td>0.003751</td>\n",
+       "      <td>0.002539</td>\n",
+       "      <td>0.006024</td>\n",
+       "      <td>0.002847</td>\n",
+       "      <td>-0.003054</td>\n",
+       "      <td>VZNeutral</td>\n",
+       "      <td>IYZNeutral</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Date     CMCSA        VZ      TMUS       ATT      QCOM       QQQ  \\\n",
+       "0  1/3/2013 -0.011226 -0.004755 -0.007243  0.000571 -0.004644 -0.005222   \n",
+       "1  1/4/2013 -0.000525  0.005432  0.010331  0.005979 -0.014850 -0.003297   \n",
+       "2  1/7/2013 -0.004475  0.008765 -0.017626  0.004531  0.008000  0.000301   \n",
+       "3  1/8/2013  0.006836 -0.024636 -0.024353 -0.017030 -0.001564 -0.001952   \n",
+       "4  1/9/2013  0.006791 -0.002323  0.006410 -0.003207  0.015063  0.003751   \n",
+       "\n",
+       "        SPY       IXP       IYZ      IXTC    VZ_Perf    IYZ_Perf  \n",
+       "0 -0.002262 -0.006367 -0.002831 -0.004593  VZNeutral  IYZNeutral  \n",
+       "1  0.004382  0.006881  0.008871  0.007387  VZNeutral  IYZNeutral  \n",
+       "2 -0.002737  0.002055  0.000803 -0.001252  VZNeutral  IYZNeutral  \n",
+       "3 -0.002881 -0.008936 -0.015360 -0.004973      VZNeg      IYZNeg  \n",
+       "4  0.002539  0.006024  0.002847 -0.003054  VZNeutral  IYZNeutral  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add categorical for VZ performance\n",
+    "# equal width binning\n",
+    "bins = [-1,-.01, .01, np.inf]\n",
+    "names = ['VZNeg', 'VZNeutral', 'VZPos']\n",
+    "data2norm['VZ_Perf'] = pd.cut(data2norm['VZ'], bins, labels=names)\n",
+    "bins = [-1,-.01, .01, np.inf]\n",
+    "names = ['IYZNeg', 'IYZNeutral', 'IYZPos']\n",
+    "data2norm['IYZ_Perf'] = pd.cut(data2norm['IYZ'], bins, labels=names)\n",
+    "data2norm.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +992,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,13 +1044,6 @@
     "data2norm.to_csv('TelcomNorm.csv')\n",
     "data2Comp.to_csv('TelecomComparison.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
