Update 1 Clustering Files

--- a/MiningProject_Preprocessing.ipynb
+++ b/MiningProject_Preprocessing.ipynb
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -704,8 +704,8 @@
        "      <td>0.006881</td>\n",
        "      <td>0.008871</td>\n",
        "      <td>0.007387</td>\n",
-       "      <td>VZNeutral</td>\n",
-       "      <td>IYZNeutral</td>\n",
+       "      <td>VZPos</td>\n",
+       "      <td>IYZPos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -720,7 +720,7 @@
        "      <td>0.002055</td>\n",
        "      <td>0.000803</td>\n",
        "      <td>-0.001252</td>\n",
-       "      <td>VZNeutral</td>\n",
+       "      <td>VZPos</td>\n",
        "      <td>IYZNeutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -769,13 +769,13 @@
        "\n",
        "        SPY       IXP       IYZ      IXTC    VZ_Perf    IYZ_Perf  \n",
        "0 -0.002262 -0.006367 -0.002831 -0.004593  VZNeutral  IYZNeutral  \n",
-       "1  0.004382  0.006881  0.008871  0.007387  VZNeutral  IYZNeutral  \n",
-       "2 -0.002737  0.002055  0.000803 -0.001252  VZNeutral  IYZNeutral  \n",
+       "1  0.004382  0.006881  0.008871  0.007387      VZPos      IYZPos  \n",
+       "2 -0.002737  0.002055  0.000803 -0.001252      VZPos  IYZNeutral  \n",
        "3 -0.002881 -0.008936 -0.015360 -0.004973      VZNeg      IYZNeg  \n",
        "4  0.002539  0.006024  0.002847 -0.003054  VZNeutral  IYZNeutral  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,10 +783,10 @@
    "source": [
     "# Add categorical for VZ performance\n",
     "# equal width binning\n",
-    "bins = [-1,-.01, .01, np.inf]\n",
+    "bins = [-1,-.005, .005, np.inf]\n",
     "names = ['VZNeg', 'VZNeutral', 'VZPos']\n",
     "data2norm['VZ_Perf'] = pd.cut(data2norm['VZ'], bins, labels=names)\n",
-    "bins = [-1,-.01, .01, np.inf]\n",
+    "bins = [-1,-.005, .005, np.inf]\n",
     "names = ['IYZNeg', 'IYZNeutral', 'IYZPos']\n",
     "data2norm['IYZ_Perf'] = pd.cut(data2norm['IYZ'], bins, labels=names)\n",
     "data2norm.head()"
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,6 +1044,13 @@
     "data2norm.to_csv('TelcomNorm.csv')\n",
     "data2Comp.to_csv('TelecomComparison.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
