--- a/IncomeClassification.ipynb
+++ b/IncomeClassification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "import graphviz\n",
     "\n",
+    "from sklearn import metrics\n",
     "data = pd.read_csv(\"adultdata.csv\",sep=',',header=0)\n",
     "\n",
     "\n",
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +153,7 @@
        "4             1           1       0  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +180,7 @@
        "(None, 32561)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +242,7 @@
        " 'Income']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +293,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +306,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is  82.01453577643566\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction=tree1.predict(Xtest)\n",
+    "prediction\n",
+    "print(\"Accuracy is \",accuracy_score(Ytest,prediction)*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +335,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +372,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +385,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is  81.86098884225612\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction=tree4.predict(Xtest)\n",
+    "prediction\n",
+    "print(\"Accuracy is \",accuracy_score(Ytest,prediction)*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7034  394]\n",
+      " [1378  963]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# confusion matrix\n",
+    "confusion=(metrics.confusion_matrix(Ytest,prediction))\n",
+    "print(confusion)\n",
+    "TP=confusion[1,0]\n",
+    "TP=confusion[0,0]\n",
+    "TP=confusion[0,1]\n",
+    "TP=confusion[1,1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +438,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +472,7 @@
        "            presort=False, random_state=100, splitter='best')"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,6 +481,25 @@
     "# Decision Tree classifier with criterion information gain\n",
     "tree3 = DecisionTreeClassifier(criterion = \"entropy\", random_state=100,max_depth=4,min_samples_split=100,max_features=3,min_samples_leaf=30)\n",
     "tree3.fit(Xtrain,Ytrain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is  80.56095813286927\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction=tree3.predict(Xtest)\n",
+    "prediction\n",
+    "print(\"Accuracy is \",accuracy_score(Ytest,prediction)*100)"
    ]
   },
   {
@@ -453,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +549,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +562,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is  81.86098884225612\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction=tree3a.predict(Xtest)\n",
+    "prediction\n",
+    "print(\"Accuracy is \",accuracy_score(Ytest,prediction)*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +591,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
